language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_global_lossy_acquire_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_global_lossy_acquire_invalid.move:32:9
   │
29 │         let p1 = borrow_global<Pair>(addr1);
   │                  -------------------------- It is still being borrowed by this reference
   ·
32 │         eq_helper(p1, addr2)
   │         ^^^^^^^^^^^^^^^^^^^^ Invalid acquiring of resource 'Pair'

